# n-body-rust

./: Cargo.toml  README.md
src/: main.rs  universes.rs  viewport.rs
src/engine/: metrics.rs  mod.rs  universe.rs
src/physics/: collision.rs  gravity.rs  mod.rs
src/physics/numerical_methods/: euler_method.rs  mod.rs
src/physics/primitives/: mod.rs  position.rs  vector.rs
