[package]
name = "n-body-rust"
version = "0.1.0"
authors = ["Timothy McCarthy <ebh042@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.40.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.78.0"
rand = "0.8.3"
font-kit = "0.10.1"
